--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Author: Who wrote it
 Maintainer: The package maintainer <yourself@somewhere.net>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
 Imports: 
@@ -15,3 +15,7 @@ Imports:
     R6,
     shiny
 RoxygenNote: 7.2.3
+Suggests: 
+    RSQLite,
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
