--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,7 @@ Description: A module for adding a chat to a Shiny app. Allows
     users to send messages and view messages from other users. 
     Messages can be stored in a database or a rds file.
 License: GPL (>= 3)
+URL: https://github.com/julianschmocker/shinyChatR
 Encoding: UTF-8
 LazyData: true
 Imports: 
