--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: shinyChatR
 Type: Package
-Title: A module for adding a chat to a Shiny app
+Title: A Module for Adding a Chat to a Shiny App
 Version: 1.0.0
 Authors@R: 
     c(person(given = "Julian",
@@ -10,7 +10,7 @@ Authors@R:
       )
 Description: A module for adding a chat to a Shiny app. Allows
     users to send messages and view messages from other users. 
-    Messages can be stored in a database or a rds file.
+    Messages can be stored in a database or a .rds file.
 License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
